alterações no coffer

--- a/coffers.css
+++ b/coffers.css
@@ -11,8 +11,8 @@ a{
 }
 /* root -> significa escopo global (precisa de : para chamar ele */
 :root{
-    --primary-color: #9ecefe;
-    --secondary-color: #980056;
+    --primary-color: #f5e779;
+    --secondary-color: #6a3304;
 }
 body{
     /* Informações de altura
@@ -46,4 +46,73 @@ header a{
 }
 header img{
     height: 100px;
+}
+main{
+    flex-grow: 1;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+.title{
+    color: white;
+    text-align: center;
+    position: relative;
+}
+.title h1{
+    font-size: 13vw;
+}
+.title span{
+    position: absolute;
+    font-size: 16vw;
+    left: 0; /*Leva tudo para esquerda (Só funciona se tiver o position absolute)*/
+    top: -50%; /*Leva tudo para cima (Só funciona se tiver o position absolute)*/
+    opacity: 0.3; /*Mudar a opacidade*/
+}
+.container{
+    display: flex;
+}
+.description{
+    width: 50%;
+    color: var(--secondary-color);
+}
+.description h2{
+    font-size: 70px;
+}
+.description p{
+    font-size: 30px;
+    width: 500px;
+    z-index: 1;
+}
+.text{
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.text {
+    background-color: var(--secondary-color);
+    height: 100px;
+    width: 400px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    left: 70%;
+    color: white;
+    font-size: 30px;
+}
+footer{
+    height: 50px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: var(--secondary-color);
+    font-style: italic;
+}
+.coffer-img{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50% , -50%);
+    height: 50vh;
 }
